.local/share/gem/ruby/3.2.0/extensions/x86_64-linux/3.2.0/msgpack-1.4.2/gem_make.out
current directory: /home/runner/workspace/.local/share/gem/ruby/3.2.0/gems/msgpack-1.4.2/ext/msgpack
/nix/store/l8k1zfxjixk6f5sya5x86sdyxffz6bcf-ruby-3.2.2/bin/ruby extconf.rb
checking for ruby/st.h... yes
checking for st.h... no
checking for rb_str_replace() in ruby.h... yes
checking for rb_intern_str() in ruby.h... yes
checking for rb_enc_interned_str() in ruby.h... yes
checking for rb_sym2str() in ruby.h... yes
checking for rb_str_intern() in ruby.h... yes
checking for rb_block_lambda() in ruby.h... yes
checking for rb_hash_dup() in ruby.h... yes
checking for rb_hash_clear() in ruby.h... yes
creating Makefile

current directory: /home/runner/workspace/.local/share/gem/ruby/3.2.0/gems/msgpack-1.4.2/ext/msgpack
make DESTDIR\= sitearchdir\=./.gem.20251227-808-9oa4d2 sitelibdir\=./.gem.20251227-808-9oa4d2 clean

current directory: /home/runner/workspace/.local/share/gem/ruby/3.2.0/gems/msgpack-1.4.2/ext/msgpack
make DESTDIR\= sitearchdir\=./.gem.20251227-808-9oa4d2 sitelibdir\=./.gem.20251227-808-9oa4d2
compiling buffer.c
compiling buffer_class.c
buffer_class.c: In function ‘read_until_eof’:
buffer_class.c:261:17: error: passing argument 3 of ‘rb_rescue2’ from incompatible pointer type [-Wincompatible-pointer-types]
  261 |                 read_until_eof_error, (VALUE)(void*) args,
      |                 ^~~~~~~~~~~~~~~~~~~~
      |                 |
      |                 VALUE (*)(VALUE) {aka long unsigned int (*)(long unsigned int)}
In file included from /nix/store/l8k1zfxjixk6f5sya5x86sdyxffz6bcf-ruby-3.2.2/include/ruby-3.2.0/ruby/ruby.h:41,
                 from /nix/store/l8k1zfxjixk6f5sya5x86sdyxffz6bcf-ruby-3.2.2/include/ruby-3.2.0/ruby.h:38,
                 from compat.h:22,
                 from buffer_class.c:19:
/nix/store/l8k1zfxjixk6f5sya5x86sdyxffz6bcf-ruby-3.2.2/include/ruby-3.2.0/ruby/internal/iterator.h:388:63: note: expected ‘VALUE (*)(VALUE,  VALUE)’ {aka ‘long unsigned int (*)(long unsigned int,  long unsigned int)’} but argument is of type ‘VALUE (*)(VALUE)’ {aka ‘long unsigned int (*)(long unsigned int)’}
  388 | VALUE rb_rescue2(VALUE (*b_proc)(VALUE), VALUE data1, VALUE (*r_proc)(VALUE, VALUE), VALUE data2, ...);
      |                                                       ~~~~~~~~^~~~~~~~~~~~~~~~~~~~~
make: *** [Makefile:248: buffer_class.o] Error 1

make failed, exit code 2
